--- a/LuzAriza_OscarQuispe_COMP304_Assign4/app/src/main/AndroidManifest.xml
+++ b/LuzAriza_OscarQuispe_COMP304_Assign4/app/src/main/AndroidManifest.xml
@@ -14,11 +14,10 @@
         android:theme="@style/Theme.LuzAriza_OscarQuispe_COMP304_Assign4"
         tools:targetApi="31">
         <activity
-<<<<<<< HEAD
             android:name=".UpdateActivity"
-=======
+            android:exported="false" />
+        <activity
             android:name=".TicketActivity"
->>>>>>> cfb457ab184ad83ae18323815efd6de8d0034844
             android:exported="false" />
         <activity
             android:name=".RegisterActivity"
