--- a/LuzAriza_OscarQuispe_COMP304_Assign4/app/src/main/AndroidManifest.xml
+++ b/LuzAriza_OscarQuispe_COMP304_Assign4/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.LuzAriza_OscarQuispe_COMP304_Assign4"
         tools:targetApi="31">
         <activity
+            android:name=".CheckoutActivity"
+            android:exported="false" />
+        <activity
             android:name=".UpdateActivity"
             android:exported="false" />
         <activity
